--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.0",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
