--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-system-navigation-bar": "^2.0.1",
     "react-native-video": "^5.2.1",
-    "react-native-webview": "^11.25.1",
+    "react-native-webview": "11.23.1",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-navigation": "^4.4.4"
