--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-reanimated": "~2.12.0",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-system-navigation-bar": "^2.0.1",
     "react-native-video": "^5.2.1",
