--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.0",
     "expo": "~47.0.8",
+    "expo-screen-orientation": "~5.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-element-dropdown": "^2.5.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-system-navigation-bar": "^2.0.1",
